--- a/css/estilo_body.css
+++ b/css/estilo_body.css
@@ -16,7 +16,7 @@ img{
 .box{
     margin: 5px;
     padding: 15px;
-    background-color: #f1b985;
+    background-color: #f0b37b;
     border-radius: 10px;
     text-align: justify;
 }
